js/src/tests/test262/built-ins/NativeErrors/TypeError/name.js
verifyProperty
(
TypeError
"
name
"
{
value
:
"
TypeError
"
writable
:
false
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
